JBTM-2685 Java SE 9 updates with some TODO items and test failures